--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ html,
 
 /* 頁面：遊戲介紹背景 */
 .intro-page {
-    background-color: #fff9e1;
+    background-color: #fbf2d4;
     background-image: url("/bg-intro.png");
 }
 
