--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-image: url("/forest.png"); */
+    background-repeat: no-repeat;
     /* background-color: #fbf2d4; */
     cursor: none;
 }
@@ -47,18 +47,18 @@
 }
 
 /* 遊戲區域 - 森林場景 */
-/* .gameArea {
-    
+ .gameArea {
+    /* height: 100vh; */
     position: relative;
-    width: 90%;
+    width: 100%;
     height: calc(100vh - 100px);
-     background-image: url("/forest-background.png"); 
+    /* background-image: url("/forest-1.png"); */
     background-size: cover;
     background-position: center;
     border-radius: 15px;
     overflow: hidden;
     margin-top: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);  */
+    /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);   */
 /* 模擬綠葉和水潭 */
 /* background: linear-gradient( */
 /* to bottom, */
@@ -68,33 +68,9 @@
 /* 漸變到較亮的綠色 #78d3ac 80%, */
 /* 水潭顏色 #6ca960 100% 下方草地 */
 /* ); */
-/* }
+ }
 
-/* 森林元素: 樹木 */
-/* .gameArea::before {
-    content: "";
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    width: 70%;
-    height: 60%;
-    background-image: radial-gradient(
-            circle at 20% 30%,
-            rgba(53, 94, 59, 0.8) 5%,
-            transparent 20%
-        ),
-        radial-gradient(
-            circle at 50% 20%,
-            rgba(53, 94, 59, 0.8) 5%,
-            transparent 20%
-        ),
-        radial-gradient(
-            circle at 80% 30%,
-            rgba(53, 94, 59, 0.8) 5%,
-            transparent 20%
-        );
-    z-index: 1;
-} */
+
 
 /* 自訂游標 - 麥克風 */
 .customCursor {
